hphp/hack/test/typecheck/nonnull/await_nonnull.php.exp
File "await_nonnull.php", line 4, characters 3-10:
await can only operate on an Awaitable (Typing[4110])
File "await_nonnull.php", line 4, characters 3-10:
Expected Awaitable<[unresolved]>
File "await_nonnull.php", line 3, characters 18-24:
But got nonnull
